--- a/llm/config/training.yaml
+++ b/llm/config/training.yaml
@@ -6,11 +6,12 @@ max_length: 2048
 skip_overlong: true
 save_per_steps: 200
 data_percentage: 1
+use_flash_attention: false
 
 
 label_column_name: 'output'
 prompt_column_name: 'input'
-model_save_path: 'lora_model'
+model_save_path: 'lora_model/'
 data_path: '/work/zhangyaqing/data/Tax/tax.json'
 
 
@@ -21,3 +22,5 @@ pretrain_model_name: 'chatglm'
 
 model_name_or_path: '/work/zhangyaqing/models/chatglm2-6b'
 #  - '/work/zhangyaqing/models/llama-2-13b'
+
+
