--- a/llm/config/CEval.yaml
+++ b/llm/config/CEval.yaml
@@ -1,10 +1,13 @@
 num_gpus: 1
 quantize: 0
+use_ddp: true
+use_ds: false
 batch_size: 16
+world_size: 8
 num_trans_layers: 28
 peft_model_path: ''
 save_path: 'tax.json'
-dispatch_on_multi_gpu: true
+dispatch_on_multi_gpu: false
 pretrain_model_name: 'chatglm'
 extraction_prompt: '综上所述，ABCD中正确的选项是：'
 data_path: '../../../data/CEval/test/**/*.jsonl'
