--- a/diffusion/stablediffusion/configs/eval.yaml
+++ b/diffusion/stablediffusion/configs/eval.yaml
@@ -1,25 +1,25 @@
-prompt: 'a professional photograph of an astronaut riding a triceratops'
+prompt: 'A green rose blooms in a dandelion jungle'
 outdir: 'outputs/txt2img-samples'
-steps: 50
-plms: true
-dpm: true
-fixed_code: true
+steps: 10
+plms: false
+dpm: false
+fixed_code: false
 ddim_eta: 0.0
-n_iter: 3
+n_iter: 10
 H: 512
 W: 512
 C: 4
 f: 8
-n_samples: 3
+n_samples: 5
 n_rows: 0
 scale: 9.0
-from-file: ''
+from_file: ''
 config: 'configs/stable-diffusion/v2-inference.yaml'
-ckpt: ''
+ckpt: '../../../models/stable-diffusion-2-1/v2-1_768-ema-pruned.ckpt'
 seed: 42
 precision: 'autocast'  # [full, autocast]
 repeat: 1
 device: 'cuda'  # [cpu, cuda]
-torchscript: true
-ipex: true
-bf16: true
+torchscript: false
+ipex: false
+bf16: false
